--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Work Experience</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#workexp">Work Experience</a></li>
+                    <li><a href="#projects-portfolio">Projects</a></li>
                     <li><a href="#">Certifications</a></li>
-                    <li><a href="#">Contact Me</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
                 </ul>
             </nav>
             <div class="header-text">
@@ -77,21 +77,7 @@
             </div>
         </div>
    </div>
-   <script>
-    var tablinks = document.getElementsByClassName("tab-links")
-    var tabcontents = document.getElementsByClassName("tab-contents")
 
-    function opentab(tabname){
-        for(tablink of tablinks){
-            tablink.classList.remove("active-link");
-        }
-        for(tabcontent of tabcontents){
-            tabcontent.classList.remove("active-tab");
-        }
-        event.currentTarget.classList.add('active-link');
-        document.getElementById(tabname).classList.add("active-tab");
-    }
-   </script>
 
 <!-- Work-Experience Section  -->
 <div id="workexp">
@@ -177,5 +163,46 @@
 
     </div>
 </div>
+
+
+<!-- contancts section  -->
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <div class="social-icons">
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                </div>
+
+            </div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Please Enter Your Name" required>
+                    <input type="email" name="email" placeholder="Please Enter Your Email" required>
+                    <textarea name="Message" rows="6" placeholder=""></textarea>
+                    <button type="submit">Submit</button>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    var tablinks = document.getElementsByClassName("tab-links")
+    var tabcontents = document.getElementsByClassName("tab-contents")
+
+    function opentab(tabname){
+        for(tablink of tablinks){
+            tablink.classList.remove("active-link");
+        }
+        for(tabcontent of tabcontents){
+            tabcontent.classList.remove("active-tab");
+        }
+        event.currentTarget.classList.add('active-link');
+        document.getElementById(tabname).classList.add("active-tab");
+    }
+   </script>
 </body>
 </html>
