--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,23 @@
                     <li><a href="#contact">Contact Me</a></li>
                 </ul>
             </nav>
-            <div class="header-text">
-                <h1> Hola! I am <br>Sai Abhinav Reddy Badinehal</h1> 
+            <div class="header-content">
+                <div class="header-text">
+                    <h1> Hola! <i class="fa-solid fa-heart"></i> I am <br>Sai Abhinav Reddy <br>Badinehal</h1> 
+                        <div class="social-icons">
+                            <a href="https://www.linkedin.com/in/saiabhinavreddybadineh/"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://github.com/abhinavbadin"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://leetcode.com/AbhinavBadinehal/"><img src="images/leetcode.ico" height="30"></a>
+                        </div>
+                </div>
+                <div class="header-img">
+                    <img src="images/IMG_6509_Original.jpeg" alt="Your Image">
+                </div>
             </div>
+            
+            <a href="#about" class="btn">Know More</a>
         </div>
     </div>
-
 
 
    <!-- About Me Section -->
@@ -46,9 +57,9 @@
                         and forward-thinking software solutions.
                     </p>
                     <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('Experience')">Experience</p>
-                        <p class="tab-links" onclick="opentab('Education')">Education</p>
+                        <p class="tab-links active-link" onclick="opentab('skills','a')">Skills</p>
+                        <p class="tab-links" onclick="opentab('Experience','a')">Experience</p>
+                        <p class="tab-links" onclick="opentab('Education','a')">Education</p>
                     </div>
 
                     <div class="tab-contents active-tab" id="skills">
@@ -63,7 +74,9 @@
 
                     <div class="tab-contents" id="Experience">
                         <ul>
-                            <li><span>June 2021 - July 2022</span><br> Software Engineer at Tata Consultancy Services</li>
+                            <li><span>Tata Consultancy Services:- 1 year 2 months </span><br></li>
+                            <li><span>December 2021 - July 2022</span><br> Software Engineer</li>
+                            <li><span>June 2021 - November 2021</span><br> Assistant Software Engineer</li>
                         </ul>
                     </div>
 
@@ -90,11 +103,11 @@
             <div class="about-col-2">
                 
                 <div class="workexp-title">
-                    <p class="workexp-links active-links"> Software Engineer </p>
-                    <p class="workexp-links" > Assistant Software Engineer </p>
+                    <p class="workexp-links active-link" onclick="opentab('se' , 'w')"> Software Engineer </p>
+                    <p class="workexp-links" onclick="opentab('ase' , 'w')" > Assistant Software Engineer </p>
                 </div>
 
-                <div class="workexp-contents active-tabs" id="se">
+                <div class="workexp-contents active-tab" id="se">
                     <ul>
                         <span>December 2021 - July 2022</span>
                         <li>Developed Customs Chatbot for German-based Semiconductor company Infineon by utilizing
@@ -160,7 +173,7 @@
                 </div>
             </div>    
         </div>
-
+        <a href="https://github.com/abhinavbadin" class="btn">See More</a>
     </div>
 </div>
 
@@ -172,37 +185,61 @@
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/saiabhinavreddybadineh/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/abhinavbadin"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.twitter.com"><i class="fa-brands fa-twitter-square"></i></a>
                 </div>
+                <a href="" class="btn btn2">Download My Resume</a>
 
             </div>
             <div class="contact-right">
                 <form>
                     <input type="text" name="Name" placeholder="Please Enter Your Name" required>
                     <input type="email" name="email" placeholder="Please Enter Your Email" required>
-                    <textarea name="Message" rows="6" placeholder=""></textarea>
-                    <button type="submit">Submit</button>
+                    <textarea name="Message" rows="6" placeholder="Please Enter Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
                 </form>
 
             </div>
         </div>
     </div>
 </div>
+
+
 <script>
     var tablinks = document.getElementsByClassName("tab-links")
     var tabcontents = document.getElementsByClassName("tab-contents")
 
-    function opentab(tabname){
-        for(tablink of tablinks){
+    var workexplinks = document.getElementsByClassName("workexp-links")
+    var workexpcontents = document.getElementsByClassName("workexp-contents")
+
+    function opentab(tabname,sec){
+        console.log(tabname,sec)
+        if(sec == 'a')
+        {
+            for(tablink of tablinks){
             tablink.classList.remove("active-link");
-        }
-        for(tabcontent of tabcontents){
+            }
+            for(tabcontent of tabcontents){
             tabcontent.classList.remove("active-tab");
+            }
+            event.currentTarget.classList.add('active-link');
+            document.getElementById(tabname).classList.add("active-tab");
         }
-        event.currentTarget.classList.add('active-link');
-        document.getElementById(tabname).classList.add("active-tab");
+        else if (sec == 'w')
+        {
+            for(tablink of workexplinks){
+                tablink.classList.remove("active-link");
+            }
+            for(tabcontent of workexpcontents){
+                tabcontent.classList.remove("active-tab");
+            }
+            event.currentTarget.classList.add('active-link');
+            document.getElementById(tabname).classList.add("active-tab");
+        }
     }
-   </script>
+
+</script>
 </body>
 </html>
