all developments done

--- a/src/index.html
+++ b/src/index.html
@@ -214,13 +214,13 @@
 
             </div>
             <div class="contact-right">
-                <form>
+                <form name="submit-to-google-sheet">
                     <input type="text" name="Name" placeholder="Please Enter Your Name" required>
-                    <input type="email" name="email" placeholder="Please Enter Your Email" required>
+                    <input type="email" name="Email" placeholder="Please Enter Your Email" required>
                     <textarea name="Message" rows="6" placeholder="Please Enter Message"></textarea>
                     <button type="submit" class="btn btn2">Submit</button>
                 </form>
-
+                <span id="msg"></span>
             </div>
         </div>
     </div>
@@ -271,5 +271,23 @@
         sidemenu.style.left="-200px";
     }
 </script>
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyatAO3g5DeWTqv--7OZ34w-56-Dy8H_bKlhO9Y_kmUTkFe_v0HQ1ipbtd0M7hdqNduvQ/exec'
+    const form = document.forms['submit-to-google-sheet']
+    
+    const msg = document.getElementById("msg")
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML="Message Sent.! Please be Rest Assured I will get back to you :)"
+            setTimeout(function(){
+                msg.innerHTML=""
+            },5000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </body>
 </html>
