desktop bug done

--- a/src/index.html
+++ b/src/index.html
@@ -264,27 +264,51 @@
 <script>
     var sidemenu = document.getElementById("sidemenu");
 
-    function openmenu(){
-        sidemenu.style.left="0";
-        sidemenu.classList.add('open'); // Add this line
-        document.querySelector('.fa-bars').style.display = 'none'; // Hide the hamburger icon
-    }
-    function closemenu(){
-        sidemenu.style.left="-200px";
-        sidemenu.classList.remove('open'); // Add this line
-        document.querySelector('.fa-bars').style.display = 'block'; // Show the hamburger icon again
-    }
-    document.addEventListener('DOMContentLoaded', (event) => {
-        // Get all your menu links
-        var menuLinks = document.querySelectorAll('#sidemenu a');
+    // function openmenu(){
+    //     sidemenu.style.left="0";
+    //     sidemenu.classList.add('open'); // Add this line
+    //     document.querySelector('.fa-bars').style.display = 'none'; // Hide the hamburger icon
+    // }
+    // function closemenu(){
+    //     sidemenu.style.left="-200px";
+    //     sidemenu.classList.remove('open'); // Add this line
+    //     document.querySelector('.fa-bars').style.display = 'block'; // Show the hamburger icon again
+    // }
+    // document.addEventListener('DOMContentLoaded', (event) => {
+    //     // Get all your menu links
+    //     var menuLinks = document.querySelectorAll('#sidemenu a');
 
-        // Add a click event listener to each link
-        menuLinks.forEach(function(link) {
-            link.addEventListener('click', function() {
-                closemenu(); // Call the closemenu function
-            });
+    //     // Add a click event listener to each link
+    //     menuLinks.forEach(function(link) {
+    //         link.addEventListener('click', function() {
+    //             closemenu(); // Call the closemenu function
+    //         });
+    //     });
+    // });
+    function openmenu() {
+    sidemenu.style.left = "0";
+    if (window.innerWidth <= 600) {
+        document.querySelector('.fa-bars').style.display = 'none';
+    }
+}
+
+function closemenu() {
+    sidemenu.style.left = "-200px";
+    if (window.innerWidth <= 600) {
+        document.querySelector('.fa-bars').style.display = 'block';
+    }
+}
+
+document.addEventListener('DOMContentLoaded', (event) => {
+    var menuLinks = document.querySelectorAll('#sidemenu a');
+    menuLinks.forEach(function (link) {
+        link.addEventListener('click', function () {
+            if (window.innerWidth <= 600) {
+                closemenu();
+            }
         });
     });
+});
 
 </script>
 <script>
