--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@
                     <a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://www.twitter.com"><i class="fa-brands fa-twitter-square"></i></a>
                 </div>
-                <a href="images/Badinehal_SaiAbhinavReddy_Resume.pdf" download class="btn btn2">Download My Resume</a>
+                <!-- <a href="images/Badinehal_SaiAbhinavReddy_Resume.pdf" download class="btn btn2">Download My Resume</a> -->
 
             </div>
             <div class="contact-right">
