certificate addition update

--- a/src/index.html
+++ b/src/index.html
@@ -194,6 +194,14 @@
                 </div>
             </div>
 
+            <div class="certificate">
+                <img src="images/databricks_associate_badge.webp">
+                <div class="layer">
+                    <h3>I am Databricks Certified Data Engineer Associate</h3>
+                    <a href="https://credentials.databricks.com/a730bbfa-5358-4e11-91c7-aa63f0250cc2#acc.as9RlMx4"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
