--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,9 @@
                 <div class="about-col-2">
                     <h1 class = "sub-title"> About Me </h1>
                     <p> A passionate software engineer with a Master's degree in Computer Science and 
-                        hands-on experience at Tata Consultancy Services, specializing in backend development, 
+                        hands-on experience of more than 3.5 years specializing in backend development, 
                         blockchain technology, and AI service integration. 
-                        My drive for continuous learning is showcased by my recent achievement as an AWS Certified Cloud Practitioner. 
+                        My drive for continuous learning is showcased by my recent achievement as an Databricks Certified Data Engineer Associate & AWS Certified Cloud Practitioner. 
                         I am eager to bring my blend of technical expertise and innovative problem-solving to a dynamic team, contributing to impactful 
                         and forward-thinking software solutions.
                     </p>
@@ -68,23 +68,29 @@
                         <ul>
                             <li><span>Programming Languages</span><br>Python, C#, Java, C++, C, Solidity, SQL</li>
                             <li><span>Web Development</span><br>HTML, CSS, JavaScript, ReactJS</li>
-                            <li><span>Data Management and Analytics</span><br>MySQL, MongoDB, Amazon S3</li>
-                            <li><span>FrameWorks</span><br>Flask, Microsoft Bot Framework, Rest API </li>
+                            <li><span>Data Management and Analytics</span><br>MySQL, MongoDB, Amazon S3, Redis, Pinecone</li>
+                            <li><span>FrameWorks</span><br>Flask, .NET Core,  Microsoft Bot Framework, Rest API </li>
                             <li><span>Cloud</span><br> AWS, Azure </li>
                         </ul>
                     </div>
 
                     <div class="tab-contents" id="Experience">
                         <ul>
-                            <li><span>Tata Consultancy Services:- 1 year 2 months </span><br></li>
-                            <li><span>December 2021 - July 2022</span><br> Software Engineer</li>
-                            <li><span>June 2021 - November 2021</span><br> Assistant Software Engineer</li>
+                            <li><span>Synapse Tech Services Inc</span><br></li>
+                            <li><span>April 2023 - February 2024</span><br> Software Developer - Intern & Co-op </li>
+                            <li><span>March 2024 - Present</span><br> Software Developer</li>
+                        </ul>
+                        <br>
+                        <ul>
+                            <li><span>Tata Consultancy Services</span><br></li>
+                            <li><span>June 2021 - July 2022</span><br> Software Engineer</li>
+                            <li><span>January 2021 - June 2021</span><br> Assistant Software Engineer</li>
                         </ul>
                     </div>
 
                     <div class="tab-contents" id="Education">
                         <ul>
-                            <li><span>August 2022 - December 2023</span><br>Masters from University at Buffalo</li>
+                            <li><span>August 2022 - February 2024</span><br>Masters from University at Buffalo</li>
                             <li><span>June 2017 - June 2021</span><br>Bachelors from GITAM University Hyderabad</li>
                         </ul>
                     </div>
@@ -111,7 +117,7 @@
 
                 <div class="workexp-contents active-tab" id="se">
                     <ul>
-                        <span>December 2021 - July 2022</span>
+                        <span>June 2021 - July 2022</span>
                         <li>Developed Customs Chatbot for German-based Semiconductor company Infineon, leveraging in bot to
                             provide 97% accurate answers and 15% increase in operational efficiency utilising Microsoft Bot
                             Framework (C#), Python, MySQL, and REST API.</li>
@@ -124,7 +130,7 @@
                 </div>
                 <div class="workexp-contents" id="ase">
                     <ul>
-                        <span>June 2021 - November 2021</span>
+                        <span>January 2021 - June 2021</span>
                         <li>Designed chatbot application using React JS, JavaScript, and MongoDB, serving in over 500 users
                             monthly, providing streamlined teaming-up processes, and receiving commendable feedback from 95%
                             of management.</li>
